bug chrome overflow

--- a/style.css
+++ b/style.css
@@ -423,6 +423,7 @@ footer p{
 	width: 70%;
 	height: auto;
 	box-sizing: border-box;
+	overflow: hidden;
 	}
 
 	div.home1{
